muoni/GraalVM/language/tests/error/UndefinedFunction02.hn
fn invoke(f) {
  f("hello");
}

fn f1() {
  println("f1");
}

fn main() {
  invoke(f1);
  invoke(foo);  
}  
